--- a/www/static/css/custom.css
+++ b/www/static/css/custom.css
@@ -21,3 +21,13 @@
 	right: 0;
 	width: 25%;
 }
+
+.loading{
+	background-color: #F1F1F1;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background-image: url('../img/tit.loading.gif');
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+}
