--- a/www/static/css/custom.css
+++ b/www/static/css/custom.css
@@ -27,7 +27,7 @@
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
-	background-image: url('../img/tit.loading.gif');
+	background-image: url('../img/loader.gif');
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
 }
