Added thumb class.

--- a/www/static/css/custom.css
+++ b/www/static/css/custom.css
@@ -67,3 +67,9 @@
     vertical-align: middle;
     width: 300px;
 }
+
+.thumb{
+	background-size: cover;
+	background-repeat: no-repeat;
+	padding-top: 100%;
+}
